Added QOL features, including: chat history is shared across tabs; confirmation pop-ups to clear chat history.

--- a/chatbox.html
+++ b/chatbox.html
@@ -88,6 +88,23 @@
             </div>
         </div>
     </div>
+	<div id="confirmation-modal" class="hidden">
+		<div class="confirmation-box">
+            <p class="confirmation-text" data-key="clearConfirm">Are you sure?</p>
+            <div class="confirmation-actions">
+				<button id="confirm-yes" class="confirm-btn" data-key="yes">Yes</button>
+                <button id="confirm-no" class="confirm-btn" data-key="no">No</button>
+			</div>
+		</div>
+    </div>
+	<div id="success-modal" class="hidden">
+        <div class="confirmation-box">
+            <p class="confirmation-text" data-key="chatCleared">Chat history cleared!</p>
+            <div class="confirmation-actions">
+                <button id="success-ok" class="confirm-btn" data-key="ok">OK</button>
+            </div>
+        </div>
+    </div>
     <script src="chatbox.js"></script>
 </body>
 </html>
